@@ -1,6 +1,7 @@
 webkit2gtk (2.15.4-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Refresh all patches.
 
  -- Alberto Garcia <berto@igalia.com>  Tue, 31 Jan 2017 14:02:33 +0200
 
